<resources>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="app_name">MoRo</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="next">Next</string>
    <string name="enter_otp">Verification Code</string>
    <string name="otp_desc">Please type the verification code sent to </string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="setting">Settings</string>
    <string name="data_storage_usage">Data and storage usage</string>
    <string name="account">Account</string>
    <string name="users">Lorem Ipsum</string>
    <string name="setting_hey_there">Hey there ! I am using MoRo.</string>
    <string name="business_setting">Business Settings</string>
    <string name="setting_profile">Profile, statistics, messages tools</string>
    <string name="account_setting">Account</string>
    <string name="setting_privacy">Privacy, security, change number</string>
    <string name="chat_setting">Chats</string>
    <string name="setting_Backup">Backup, history, wallpaper</string>
    <string name="notifications_setting">Notifications</string>
    <string name="setting_message">Message, group and call tones</string>
    <string name="setting_data">Data and storage usage</string>
    <string name="setting_net">Network usage, auto-download</string>
    <string name="helps">Help</string>
    <string name="setting_help">FAC, contact us, privacy policy</string>
    <string name="invites">Invite a contact</string>
    <string name="privacy">privacy</string>
    <string name="security">Security</string>
    <string name="two_step_verification">Two-step verification</string>
    <string name="change_number">Change number</string>
    <string name="delete_account">Delete account</string>
    <string name="data_store">Voice message are always auto-download for the best communication experience</string>
    <string name="enter_key">Enter key will send your message</string>
    <string name="show_media">Show newly downloaded media in your phone`s gallery</string>
    <string name="conversation_tones">Play sounds for incoming and outgoing messages</string>
    <string name="high_priority">Show previews of notifications at the top of the screen</string>
    <string name="subjetc_prompt">Select Type</string>
    <string-array name="select_types">
        <item>Select Type</item>
        <item>Business</item>
        <item>Personal</item>
    </string-array>
    <string name="business_category">Business Category/Company Name</string>
    <string name="select">Select</string>
    <string name="Add_More">Add More</string>
    <string name="Company_Address">Company Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="Company_Email">Company Email</string>
    <string name="Company_Website">Company Website</string>
    <string name="EstablishedIn">Established In</string>
    <string name="Company_Contact_No">Company Contact No.</string>
    <string name="Type_your_text_here">Type your text here ...</string>
    <string name="What_is_a_Channel">What is a Channel?</string>
    <string name="Channel_are_a_tool_for_broadcasting_your_messages_to_unlimited_audiences">Channels are a tool for broadcasting your messages to unlimited audiences</string>
    <string name="Create_Channel">Create Channel</string>
    <string name="Group_Name">Group Name</string>
    <string name="Set_you_imagelogo">Set you image/logo</string>
    <string name="Select_Account_Type">Select Account Type:</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Email_Id">Email Id</string>
    <string name="dob">Date Of Birth</string>
    <string name="Business_Name">Business Name</string>
    <string name="Business_Category">Business Category</string>
    <string name="Full_Name">Full Name</string>
    <string name="mogo_number">Mobile Number (Enter MoRo Mobile Number as recruiter can send you message)</string>
    <string name="gender">Gender</string>
    <string name="Address">Address</string>
    <string name="professional_details">Professional Details</string>
    <string name="Last_Company_Name">Last Company Name</string>
    <string name="Designation">Designation</string>
    <string name="Work_Experience_in_Last_Company">Work Experience in Last Company</string>
    <string name="Work_Location">Work Location</string>
    <string name="Profile_Headline">Profile Headline</string>
    <string name="Skills">Skills</string>
    <string name="Job_Experience">Job Experience</string>
    <string name="Employment_Type">Employment Type</string>
    <string name="Qualification">Qualification</string>
    <string name="Salary_Expectation">Salary Expectation</string>
    <string name="passport">Do you have passport?</string>
    <string name="Passport_Number">Passport Number</string>
    <string name="Industry">Industry</string>
    <string name="job_title">Job Title</string>
    <string name="Company_Name">Company Name</string>
    <string name="Save">Save</string>
    <string name="Job_Highlights">Job Highlights</string>
    <string name="Job_Vacancies">Job Vacancies</string>
    <string name="Job_Location">Job Location</string>
    <string name="Job_Salary_Package">Job Salary Package</string>
    <string name="job_skills">Job Skills</string>
    <string name="Posted_a_day_ago">Posted a day ago</string>
    <string name="Job_Description">Job Details</string>
    <string name="candidate_description">Candidate Description </string>
    <string name="loren_details">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</string>
    <string name="Lorem_ipsum">Lorem ipsum</string>
    <string name="Industry_Type">Industry Type</string>
    <string name="Job_Role">Job Role</string>
    <string name="Education">Education</string>
    <string name="Recruiter_Details">Recruiter Details</string>
    <string name="Recruiter_Name">Recruiter Name</string>
    <string name="Send_Mail">Send Mail</string>
    <string name="Follow">Follow</string>
    <string name="MoGo_Chat">MoRo Chat</string>
    <string name="About_Company">About Company</string>
    <string name="loren_details_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="Company_Info">Company Info</string>
    <string name="search">Search</string>
    <string name="Location">location</string>
    <string name="Your_Recent_Searches">Your recent searches</string>
    <string name="Searched_Name">searched name</string>
    <string name="Searched_Location">searched location</string>
    <string name="Browse_Jobs_by_Industry">Browse jobs by industry</string>
    <string name="Candidate_Name">Candidate Name</string>
    <string name="Candidate_Profile_Headline">Candidate Profile Headline</string>
    <string name="Candidate_Location">Candidate Location</string>
    <string name="Salary_Package">Salary Package</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="From_Subscription">From Subscription</string>
    <string name="Total_Applicable_Applies">Total Applicable Applies</string>
    <string name="fifty">50</string>
    <string name="Total_Consumed_Applies">Total Consumed Applies</string>
    <string name="Total_Remaining_Applies">Total Remaining Applies</string>
    <string name="Share_MoGo">Share MoRo...</string>
    <string name="Select_contacts_to_invite_them_to_MoGo">Select contacts to invite them to MoRo</string>
    <string name="Welcome_to_MoGo">Welcome to MoRo</string>
    <string name="Or">Or</string>
    <string name="Sign_in_with_Social_Networks">Sign in with Social Networks</string>
    <string name="Job_Details">Job Details</string>
    <string name="Experience_Required">Experience Required</string>
    <string name="Recruiter_Contact_Number">Recruiter Contact Number</string>
    <string name="Recruiter_Company_Name">Recruiter Company Name</string>
    <string name="Recruiter_MoGo_Contact_Number">Recruiter MoRo Contact Number</string>
    <string name="Candidate_Company_Name">Candidate Company Name</string>
    <string name="Candidate_Designation">Candidate Designation</string>
    <string name="Candidate_Highlights">Candidate Highlights</string>
    <string name="Expected_Salary_Package">Expected Salary Package</string>
    <string name="Candidate_Skills">Candidate Skills</string>
    <string name="Other_Details">Other Details</string>
    <string name="Candidate_Address">Candidate Address</string>
    <string name="Candidate_Date_of_Birth">Candidate Date of Birth</string>
    <string name="Send_Message">Send Message</string>
    <string name="Company_Location">Company Location</string>
    <string name="Subscription_Valid_Till">Subscription Valid Till</string>
    <string name="twentysixfeb">26-February-2020</string>
    <string name="Posted_Jobs">Posted Jobs</string>
    <string name="Dinesh">Dinesh</string>
    <string name="Account">Account</string>
    <string name="number">9868555551</string>
    <string name="Tap_to_change_Phone_number">Tap to  change Phone number</string>
    <string name="None">None</string>
    <string name="User_Name">User Name</string>
    <string name="Bio">Bio</string>
    <string name="Add_Something_about_yourself">Add Something about yourself</string>
    <string name="Notifications_and_Sounds">Notifications and Sounds</string>
    <string name="Privacy_and_Security">Privacy and Security</string>
    <string name="Data_and_Storage">Data and Storage</string>
    <string name="Chat_Settings">Chat Settings</string>
    <string name="Device">Device</string>
    <string name="Language">Language</string>
    <string name="Help">Help</string>
    <string name="Start_Messaging">Start Messaging</string>
    <string name="Others">Others</string>
    <string name="About">About</string>
    <string name="Available_Balance">Available Balance</string>
    <string name="Zeropointzero">0.00</string>
    <string name="candidate_name_designation">Candidate Name (Designation)</string>
    <string name="Candidate_Experience_Package">Candidate Experience, Package</string>
    <string name="Candidate_DOB_Location">Candidate DOB, Location</string>
    <string name="Date_Time">Date Time</string>
    <string name="Required_Experience_Salary_Package">Required Experience, Salary Package</string>
    <string name="Company_Name_Job_Location">Company Name, Job Location</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text</string>
    <string name="dollar_fourfive">$ 456</string>
    <string name="time">09:26 AM</string>
    <string name="You">You</string>
    <string name="Job_Experience_Salary_Package">Job Experience, Salary Package</string>
    <string name="Channel_type">Channel type</string>
    <string name="Public_channels_can_be_found_in_search_anyone_can_join_them">Public channels can be found in search, anyone can join them</string>
    <string name="Public_channels">Public Channel</string>
    <string name="Privatenelscannlybejoinedvia_an_invite_link">Private Channels can only be joined via an invite link</string>
    <string name="Permanent_link">Permanent link</string>
    <string name="link">link</string>
    <string name="t_me">t.me/</string>
    <string name="set_permanent">If you set a permanent link, other people will be able to join your channel.</string>
    <string name="password_rules">You can use a-z, 0-9 and underscores. Minimum length is 5 characters.</string>
</resources>