<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/bg_layout_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/candidate_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/user_dummy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/candidate_img"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/candidate_name_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/candidate_name_designation"
                    android:textColor="@color/text_purple"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/candidate_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Candidate_Company_Name"
                    android:textColor="@color/text_purple"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/candidate_experience_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Candidate_Experience_Package"
                    android:textColor="@color/text_purple"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/candidate_dob_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Candidate_DOB_Location"
                    android:textColor="@color/text_purple"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/job_title"
            android:textColor="@color/text_purple"
            android:textSize="16sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@color/light_purple" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Send_Mail"
                android:textColor="@color/text_purple"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Follow"
                android:textColor="@color/text_purple"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mogo_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/MoGo_Chat"
                android:textColor="@color/text_purple"
                android:textStyle="normal" />

        </RelativeLayout>

        <TextView
            android:id="@+id/date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:text="@string/Date_Time"
            android:textColor="@color/light_purple"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>