<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/bg_layout_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/recruiter_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/user_dummy"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/recruiter_img"
                android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/recruiter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Recruiter_Name"
                    android:textColor="@color/text_purple"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/recruiter_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Recruiter_Company_Name"
                    android:textColor="@color/text_purple"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textColor="@color/text_purple"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:textStyle="normal"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/job_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Job_Location"
            android:textColor="@color/text_purple"
            android:textSize="14sp"
            android:layout_marginLeft="35dp"/>

        <TextView
            android:id="@+id/job_experience_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Job_Experience_Salary_Package"
            android:textColor="@color/text_purple"
            android:textSize="14sp"
            android:layout_marginLeft="35dp"/>

        <TextView
            android:id="@+id/date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date_Time"
            android:textColor="@color/light_purple"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:layout_gravity="right"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>