<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CreateChannelActivity"
    android:background="@color/bg_layout_no_color">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/brief_desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/bg_layout_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/img"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/What_is_a_Channel"
                android:layout_gravity="center"
                android:textColor="@color/text_purple"
                android:textSize="24sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Channel_are_a_tool_for_broadcasting_your_messages_to_unlimited_audiences"
                android:layout_gravity="center"
                android:textColor="@color/text_purple"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_margin="20dp"/>

            <Button
                android:id="@+id/create_channel_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_bg"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:text="Create Channel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/new_channel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/bg_layout_white">

        <LinearLayout
            android:id="@+id/image_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/user_dummy"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Channel Name"
                android:textColor="@color/text_purple"
                android:textSize="12sp"
                android:backgroundTint="@color/light_grey"
                android:layout_marginLeft="15dp"
                android:drawableRight="@drawable/ic_emoji"
                android:drawableTint="@color/light_grey"
                android:drawablePadding="12dp"
                android:padding="12dp" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description (Optional)"
            android:textColor="@color/text_purple"
            android:textSize="12sp"
            android:backgroundTint="@color/light_grey"
            android:layout_marginLeft="15dp"
            android:padding="12dp"
            android:layout_below="@+id/image_name_layout"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_bg"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/channel_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_layout_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Channel_type"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/text_purple" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Public_channels"
                        android:textColor="@color/text_purple"
                        android:textSize="16sp"
                        android:paddingLeft="15dp"
                        android:buttonTint="@color/text_purple"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Public_channels_can_be_found_in_search_anyone_can_join_them"
                        android:layout_marginLeft="46dp"
                        android:textColor="@color/lighter_purple"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Private Channel"
                        android:textColor="@color/text_purple"
                        android:textSize="16sp"
                        android:paddingLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:buttonTint="@color/text_purple"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Privatenelscannlybejoinedvia_an_invite_link"
                        android:layout_marginLeft="46dp"
                        android:textColor="@color/lighter_purple"
                        android:textSize="12sp"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_layout_white"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Permanent_link"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/text_purple" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t_me"
                        android:textSize="16sp"
                        android:textColor="@color/text_purple"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_layout_white"
                        android:hint="@string/link"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_permanent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/lighter_purple"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_rules"
                android:layout_margin="15dp"
                android:textColor="@color/lighter_purple"
                android:textSize="14sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/settings_next_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_bg"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

    </RelativeLayout>

</LinearLayout>